--- a/runkaland/config/quark-common.toml
+++ b/runkaland/config/quark-common.toml
@@ -371,9 +371,9 @@
 	[tweaks.improved_sleeping]
 		"Enable Afk" = true
 		#Allowed values: (0,)
-		"Afk Time" = 2400
+		"Afk Time" = 1200 # One minute (1 min * 60 sec * 20 ticks per sec)
 		#Allowed values: (0,1]
-		"Percent Req" = 1.0
+		"Percent Req" = 0.5
 
 	[tweaks.infinity_bucket]
 		Cost = 10
