--- a/runkaland/docker-compose.yml
+++ b/runkaland/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       MAX_BUILD_HEIGHT: 256
       MAX_TICK_TIME: '-1'
       MEMORY: 8G
-      MODPACK: https://s3.amazonaws.com/minecraft/modpacks/blolol-runkaland-1.16.4-20210106-v0.5.zip
+      MODPACK: https://s3.amazonaws.com/minecraft/modpacks/blolol-runkaland-1.16.4-v1.0.zip
       MOTD: Welcome to Runkaland!
       OPS: Doolan,Gafwyn,Raws
       OVERRIDE_SERVER_PROPERTIES: 'TRUE'
