[runkaland] Set difficulty to hard

--- a/runkaland/docker-compose.yml
+++ b/runkaland/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - './config:/config'
       - 'data:/data'
     environment:
+      DIFFICULTY: hard
       ENABLE_AUTOPAUSE: 'TRUE'
       EULA: 'TRUE'
       FORGEVERSION: 35.1.32
